syntax = "proto3";

message Post {
    int32 id = 1;
    string title = 2;
    string content = 3;
    int32 published = 4;
    int32 authorId= 5;
}

message PostList {
    repeated Post posts = 1;
}
message Empty {}

message PostRequestId {
    int32 id = 1;
}

service PostService {
    rpc GetPosts (Empty) returns (PostList);
    rpc GetPost (PostRequestid) returns (Post);
}